dnl
dnl Process this file with autoconf to create configure.

AC_PREREQ([2.60])

AC_INIT([hello_autotools], [0.28.0],
        [https://github.com/cheusov/mk-configure])

AC_CONFIG_SRCDIR([Makefile.in])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

dnl Checks for functions
AC_CHECK_HEADERS([stdio.h])

AC_OUTPUT
